<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="11">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        >

        <com.romainpiel.shimmer.ShimmerTextView
            android:text="ádfsdfsdfsdfsdf"
            android:id="@+id/tv_cosoyte"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorPurple"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_weight="2"/>


    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:text="@string/kybaocao"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spin_KyBaoCao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spin_Thang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spin_Nam"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:text="@string/tungay"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:id="@+id/ln_startDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="10">
            <TextView
                android:id="@+id/tv_startDate"
                android:text="Chọn ngày"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/calendar_50"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:text="@string/denngay"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:id="@+id/ln_endDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="10">
            <TextView
                android:id="@+id/tv_endDate"
                android:text="Chọn ngày"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/calendar_50"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:paddingTop="10dp"
            android:text="@string/loaibaocao"
            android:gravity="left"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <RadioGroup
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:weightSum="3"
            android:orientation="vertical">
            <RadioButton
                android:text="@string/tatca"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <RadioButton
                android:text="@string/ngoaitru"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <RadioButton
                android:text="@string/noitru"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:text="@string/mauin"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spin_MauIn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:text="@string/khoaphong"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spin_KhoaPhong"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/view"
            android:textColor="@color/colorWhite"
            android:background="@drawable/duongviengoctron"
            />

    </LinearLayout>







</LinearLayout>