<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.qtht.mychart.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">
        <TableRow
            android:layout_weight="1"
            android:weightSum="2">
            <LinearLayout
                android:id="@+id/ln_khambenh"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/border_rightbottom"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_khambenh"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/khambenh"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ln_vienphi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/border_leftbottom"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_cost"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vienphi"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:weightSum="2">
            <LinearLayout
                android:id="@+id/ln_noitru"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/border_rightbottomtop"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_noitru"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noitru"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/border_leftbotomtop"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_ngoaitru"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ngoaitru"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:weightSum="2">
            <LinearLayout
                android:id="@+id/ln_baocao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/border_righttop"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baocao"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baocao"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ln_chart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/border_lefttop">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_chart"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bieudo"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>
